// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Contact Page rendering renders Contact in english 1`] = `
<div>
  <div
    class="form-align"
  >
    <div>
       
      <br />
      <h9
        class="h9-font"
      >
        Who are we ? What do we do ?
      </h9>
       
      <br />
       
      <br />
      <div
        class="description-txt"
      >
        <h6
          class="title-bold"
        >
          • Überschutz :
        </h6>
        <h7>
          We are a group of 8 Epitech students from the 2021 promo.
          <br />
          Our group was created in October 2018 (first 3 people) during the Moonshot, then completed in January 2019.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Our goal :
        </h6>
        <h7>
          We want the Internet to be a place of sharing, relaxation and research.
          <br />
          Too many people and children are harassed, scammed or confronted with inappropriate content.
          <br />
          Thus, we want to guide the youngest to learn to use the Internet in the best possible way for them according to the education that their parents want to give them.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Our solution :
        </h6>
        <h7>
          Today, as young adults, we find that some content is offensive on the Internet and that it is not secure enough.
          <br />
          So what about a child?
          <br />
          That's why we offer software that can monitor Internet browsing.
          <br />
          In order to respect the freedom of the child, Überschutz is neither blocking nor intrusive.
          <br />
          That is to say that depending on the setting that parents choose, the software will only intervene as a supervisor. It will let the child navigate but will allow them to post a message when the content of the visited site may be inappropriate.
          <br />
          As a result, parents will be able to view a statistical detail about the virtual environment in which the child lives to arrive at a discussion if necessary.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div
      class="form-align uber-color2"
    >
      <h4
        class="h9-font"
      >
        <br />
        FAQ :
      </h4>
      <div
        class="uber-color2 description-txt"
      >
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          How Überschutz protects your child?
        </h6>
        <h7>
          Überschutz offers several ways to protect children.
          <br />
          This will completely block the Internet, blocking only certain sites while going through other means such as site restriction or prevention.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          How is Überschutz different from parental control and how does it protect you better?
        </h6>
        <h7>
          Überschutz is better than parental control because it is not only a barrier to children's navigation.
          <br />
          It adapts according to the dangers of each generation, intervenes only in certain really bad cases and leaves a certain free will with limits that will be known by the user.
          <br />
          Überschutz is set up according to the wishes and rules that parents want to instil in their children - it's up to them to choose the best way to protect them.
          <br />
          In other words, Überschutz is better than a parental control because the software is able to understand the child and not to stop him, here it is no longer a question of supervision but of accompaniment.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          What can you do with this software 
          <h7
            class="address"
          >
            (block, warn, be warned ...)
          </h7>
           ?
        </h6>
        <h7>
          Parents can protect their children on the Internet as they see fit.
          <br />
          If cutting their connection when they go beyond the limits seems to be the right solution, Überschutz will do it.
          <br />
          If they prefer to play on the patience of their children to access a particular site, Überschutz will do it.
          <br />
          If for them, the autonomous learning of the Internet is the best solution, Überschutz will prevent children when they exceed the limits imposed by the parents, leaving them the choice to continue or not with a pop-up.
          <br />
          At any moment, parents can see the activity their children have on the Internet thanks to the monitoring available with the software.This will allow them to see if the child is aggressive or assaulted, if he visits sites that are not recommended or if it's a toxic element on the Internet. 
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          At what price can you protect your child?
        </h6>
        <h7>
          We offer several formulas and several types of software.
          <br />
          These formulas are still under development, we will keep you informed of future advances by Newsletter!
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          How to set the application
          <h7
            class="address"
          >
            (web and mobile)
          </h7>
           ?
        </h6>
        <h7>
          For both platforms, go to the page 
          <h7
            class="address"
          >
            "Settings"
          </h7>
           and add the children you want to protect.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div>
      <br />
      <h9
        class="h9-font"
      >
        Are you interested in our solution ?
      </h9>
      <br />
      <h11>
        Feel free to keep informed by completing this form !
      </h11>
      <br />
      <h11>
        Or by contacting us at the following address : 
        <h11
          class="address"
        >
          uberschutz_2021@labeip.epitech.eu
        </h11>
      </h11>
      <form>
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-group form-align"
          >
            <label>
              Name or Surname
            </label>
            <input
              class="form-control form-box"
              placeholder="Name or Surname"
              type="text"
            />
          </div>
          <label>
            Email address
          </label>
          <input
            aria-describedby="emailHelp"
            class="form-control form-box"
            placeholder="Email address"
            type="email"
            value=""
          />
          <small
            class="form-text text-muted col-sm-9"
            id="emailHelp"
          >
            We'll never share your email with anyone else.
          </small>
        </div>
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Submit
        </button>
        <br />
      </form>
    </div>
  </div>
</div>
`;

exports[`Testing the Contact Page rendering renders Contact in french 1`] = `
<div>
  <div
    class="form-align"
  >
    <div>
       
      <br />
      <h9
        class="h9-font"
      >
        Qui sommes nous ? Que faisons nous ?
      </h9>
       
      <br />
       
      <br />
      <div
        class="description-txt"
      >
        <h6
          class="title-bold"
        >
          • Überschutz :
        </h6>
        <h7>
          Nous sommes un groupe de 8 étudiants d'Epitech de la promo 2021.
          <br />
          Notre groupe a été créé en octobre 2018 (tout d'abord 3 personnes) lors de la Moonshot, puis s'est complété courant janvier 2019.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Notre but :
        </h6>
        <h7>
          Nous voulons qu'Internet soit un lieu de partage, de détente et de recherche.
          <br />
          Beaucoup trop de personnes et d'enfants sont harcelés, arnaqués ou confrontés à du contenu inapproprié.
          <br />
          Ainsi, nous souhaitons guider les plus jeunes afin qu'ils apprennent à utiliser Internet de la meilleure manière possible pour eux selon l'éducation que leurs parents veulent leurs donner.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Notre solution :
        </h6>
        <h7>
          Aujourd'hui, en tant que jeunes adultes, nous trouvons que certains contenus sont choquants sur Internet et que ce n'est pas assez sécurisé.
          <br />
          Donc qu'en est-il pour un enfant ?
          <br />
          C'est pour cela que nous proposons un logiciel capable de monitorer la navigation Internet.
          <br />
          De ce fait, les enfants pourront être avertis que leur recherche n'est pas adaptée pour eux selon leurs parents.
          <br />
          Afin de respecter la liberté de l'enfant, Überschutz n'est ni bloquant ni intrusif.
          <br />
          C'est à dire qu'en fonction du paramétrage que les parents choisiront, le logiciel n'interviendra qu'en tant que superviseur. Il laissera l'enfant naviguer mais se permettera d'afficher un message lorsque le contenu du site visité risque d'être inapproprié.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div
      class="form-align uber-color2"
    >
      <h4
        class="h9-font"
      >
        <br />
        FAQ :
      </h4>
      <div
        class="uber-color2 description-txt"
      >
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Comment Überschutz protège votre enfant ?
        </h6>
        <h7>
          Überschutz propose plusieurs manières de protéger les enfants.
          <br />
          Cela va de bloquer complètement Internet, jusqu'à bloquer uniquement certains sites tout en passant par d'autres moyens comme la restriction de sites ou la prévention.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          En quoi Überschutz est différent d'un contrôle parental ? Et en quoi protège-t-il mieux ?
        </h6>
        <h7>
          Überschutz est mieux qu'un contrôle parental car il ne se contente pas uniquement d'être un obstacle à la navigation des enfants.
          <br />
          Il s'adapte selon les dangers de chaque génération, intervient uniquement dans certains cas de figure réellement néfastes et laisse un certain libre arbitre avec des limites qui seront connues de l'utilisateur.
          <br />
          Überschutz est paramétré selon les envies et les règles que les parents veulent inculquer à leurs enfants. A eux de choisir le meilleur moyen de les protéger.
          <br />
          En d'autres termes, Überschutz est mieux qu'un contrôle parental car le logiciel est en mesure de comprendre l'enfant et non de lui faire barrage. Ici il ne s'agit plus de surveillance mais d'accompagnement.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Que pouvez-vous faire avec ce logiciel 
          <h7
            class="address"
          >
            (bloquer, avertir, être prévenu ...) 
          </h7>
           ?
        </h6>
        <h7>
          Les parents peuvent protéger leurs enfants sur Internet de la manière dont ils l'entendent.
          <br />
          Si couper leur connexion lorsqu'ils dépassent les limites leurs paraît être la bonne solution, Überschutz le fera.
          <br />
          Si ils préfèrent jouer sur la patience de leurs enfants pour accéder à un site particulier, Überschutz le fera.
          <br />
          Si pour eux, l'apprentissage autonome d'Internet est la meilleure solution, Überschutz préviendra les enfants lorsqu'ils dépasseront les limites imposées par les parents, leurs laissant le choix de continuer ou non avec un pop-up.
          <br />
          A tout moment, les parents peuvent voir l'activité qu'ont leurs enfants sur Internet grâce au monitoring disponible avec le logiciel. Cela leur permettra de voir si l'enfant est aggressif ou agressé, s'il visite des sites peu recommandé ou si c'est un élément toxique sur Internet.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          A quel prix pouvez-vous protéger votre enfant ?
        </h6>
        <h7>
          Nous proposons plusieurs formules et plusieurs types de logiciels.
          <br />
          Ces formules sont encore en cours de développement, nous vous tiendrons au courant des futurs avancés par Newsletter !
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Comment paramétrer l'application 
          <h7
            class="address"
          >
            (web et mobile)
          </h7>
           ?
        </h6>
        <h7>
          Pour les 2 plateformes, rendez-vous sur la page 
          <h7
            class="address"
          >
            "Paramètres"
          </h7>
           et ajoutez les enfants que vous voulez protéger.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div>
      <br />
      <h9
        class="h9-font"
      >
        Vous êtes intéressés par notre solution ?
      </h9>
      <br />
      <h11>
        N'hésitez pas à vous tenir informés en remplissant ce formulaire !
      </h11>
      <br />
      <h11>
        Ou en nous contactant à l'adresse suivante : 
        <h11
          class="address"
        >
          uberschutz_2021@labeip.epitech.eu
        </h11>
      </h11>
      <form>
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-group form-align"
          >
            <label>
              Nom ou Prénom
            </label>
            <input
              class="form-control form-box"
              placeholder="Nom ou Prénom"
              type="text"
            />
          </div>
          <label>
            Adresse email
          </label>
          <input
            aria-describedby="emailHelp"
            class="form-control form-box"
            placeholder="Adresse email"
            type="email"
            value=""
          />
          <small
            class="form-text text-muted col-sm-9"
            id="emailHelp"
          >
            Nous ne partagerons jamais votre adresse email avec qui que ce soit.
          </small>
        </div>
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Soumettre
        </button>
        <br />
      </form>
    </div>
  </div>
</div>
`;

exports[`Testing the Contact Page rendering renders Contact without crashing in any language 1`] = `
<div>
  <div
    class="form-align"
  >
    <div>
       
      <br />
      <h9
        class="h9-font"
      >
        Qui sommes nous ? Que faisons nous ?
      </h9>
       
      <br />
       
      <br />
      <div
        class="description-txt"
      >
        <h6
          class="title-bold"
        >
          • Überschutz :
        </h6>
        <h7>
          Nous sommes un groupe de 8 étudiants d'Epitech de la promo 2021.
          <br />
          Notre groupe a été créé en octobre 2018 (tout d'abord 3 personnes) lors de la Moonshot, puis s'est complété courant janvier 2019.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Notre but :
        </h6>
        <h7>
          Nous voulons qu'Internet soit un lieu de partage, de détente et de recherche.
          <br />
          Beaucoup trop de personnes et d'enfants sont harcelés, arnaqués ou confrontés à du contenu inapproprié.
          <br />
          Ainsi, nous souhaitons guider les plus jeunes afin qu'ils apprennent à utiliser Internet de la meilleure manière possible pour eux selon l'éducation que leurs parents veulent leurs donner.
        </h7>
         
        <br />
         
        <br />
        <h6
          class="title-bold"
        >
          • Notre solution :
        </h6>
        <h7>
          Aujourd'hui, en tant que jeunes adultes, nous trouvons que certains contenus sont choquants sur Internet et que ce n'est pas assez sécurisé.
          <br />
          Donc qu'en est-il pour un enfant ?
          <br />
          C'est pour cela que nous proposons un logiciel capable de monitorer la navigation Internet.
          <br />
          De ce fait, les enfants pourront être avertis que leur recherche n'est pas adaptée pour eux selon leurs parents.
          <br />
          Afin de respecter la liberté de l'enfant, Überschutz n'est ni bloquant ni intrusif.
          <br />
          C'est à dire qu'en fonction du paramétrage que les parents choisiront, le logiciel n'interviendra qu'en tant que superviseur. Il laissera l'enfant naviguer mais se permettera d'afficher un message lorsque le contenu du site visité risque d'être inapproprié.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div
      class="form-align uber-color2"
    >
      <h4
        class="h9-font"
      >
        <br />
        FAQ :
      </h4>
      <div
        class="uber-color2 description-txt"
      >
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Comment Überschutz protège votre enfant ?
        </h6>
        <h7>
          Überschutz propose plusieurs manières de protéger les enfants.
          <br />
          Cela va de bloquer complètement Internet, jusqu'à bloquer uniquement certains sites tout en passant par d'autres moyens comme la restriction de sites ou la prévention.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          En quoi Überschutz est différent d'un contrôle parental ? Et en quoi protège-t-il mieux ?
        </h6>
        <h7>
          Überschutz est mieux qu'un contrôle parental car il ne se contente pas uniquement d'être un obstacle à la navigation des enfants.
          <br />
          Il s'adapte selon les dangers de chaque génération, intervient uniquement dans certains cas de figure réellement néfastes et laisse un certain libre arbitre avec des limites qui seront connues de l'utilisateur.
          <br />
          Überschutz est paramétré selon les envies et les règles que les parents veulent inculquer à leurs enfants. A eux de choisir le meilleur moyen de les protéger.
          <br />
          En d'autres termes, Überschutz est mieux qu'un contrôle parental car le logiciel est en mesure de comprendre l'enfant et non de lui faire barrage. Ici il ne s'agit plus de surveillance mais d'accompagnement.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Que pouvez-vous faire avec ce logiciel 
          <h7
            class="address"
          >
            (bloquer, avertir, être prévenu ...) 
          </h7>
           ?
        </h6>
        <h7>
          Les parents peuvent protéger leurs enfants sur Internet de la manière dont ils l'entendent.
          <br />
          Si couper leur connexion lorsqu'ils dépassent les limites leurs paraît être la bonne solution, Überschutz le fera.
          <br />
          Si ils préfèrent jouer sur la patience de leurs enfants pour accéder à un site particulier, Überschutz le fera.
          <br />
          Si pour eux, l'apprentissage autonome d'Internet est la meilleure solution, Überschutz préviendra les enfants lorsqu'ils dépasseront les limites imposées par les parents, leurs laissant le choix de continuer ou non avec un pop-up.
          <br />
          A tout moment, les parents peuvent voir l'activité qu'ont leurs enfants sur Internet grâce au monitoring disponible avec le logiciel. Cela leur permettra de voir si l'enfant est aggressif ou agressé, s'il visite des sites peu recommandé ou si c'est un élément toxique sur Internet.
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          A quel prix pouvez-vous protéger votre enfant ?
        </h6>
        <h7>
          Nous proposons plusieurs formules et plusieurs types de logiciels.
          <br />
          Ces formules sont encore en cours de développement, nous vous tiendrons au courant des futurs avancés par Newsletter !
        </h7>
         
        <br />
        <br />
        <h6
          class="question"
        >
          <i
            aria-label="icon: question-circle"
            class="anticon anticon-question-circle icon-size"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                fill="#1890ff"
              />
              <path
                d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm0 632c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                fill="#e6f7ff"
              />
              <path
                d="M472 732a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm151.6-415.3C593.6 290.5 554 276 512 276s-81.6 14.4-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.2 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0 1 30.9-44.8c59-22.7 97.1-74.7 97.1-132.5 0-39.3-17.2-76-48.4-103.3z"
                fill="#1890ff"
              />
            </svg>
          </i>
           
          Comment paramétrer l'application 
          <h7
            class="address"
          >
            (web et mobile)
          </h7>
           ?
        </h6>
        <h7>
          Pour les 2 plateformes, rendez-vous sur la page 
          <h7
            class="address"
          >
            "Paramètres"
          </h7>
           et ajoutez les enfants que vous voulez protéger.
        </h7>
         
        <br />
        <br />
      </div>
    </div>
    <div>
      <br />
      <h9
        class="h9-font"
      >
        Vous êtes intéressés par notre solution ?
      </h9>
      <br />
      <h11>
        N'hésitez pas à vous tenir informés en remplissant ce formulaire !
      </h11>
      <br />
      <h11>
        Ou en nous contactant à l'adresse suivante : 
        <h11
          class="address"
        >
          uberschutz_2021@labeip.epitech.eu
        </h11>
      </h11>
      <form>
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-group form-align"
          >
            <label>
              Nom ou Prénom
            </label>
            <input
              class="form-control form-box"
              placeholder="Nom ou Prénom"
              type="text"
            />
          </div>
          <label>
            Adresse email
          </label>
          <input
            aria-describedby="emailHelp"
            class="form-control form-box"
            placeholder="Adresse email"
            type="email"
            value=""
          />
          <small
            class="form-text text-muted col-sm-9"
            id="emailHelp"
          >
            Nous ne partagerons jamais votre adresse email avec qui que ce soit.
          </small>
        </div>
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Soumettre
        </button>
        <br />
      </form>
    </div>
  </div>
</div>
`;
